updated css to correct spacing issue

--- a/front_end/src/components/ChatBoard/Chatboard.css
+++ b/front_end/src/components/ChatBoard/Chatboard.css
@@ -1,3 +1,20 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #f2f2f2;
+  min-height: 100vh;
+}
+input {
+  width: 90%;
+  border: 1px solid;
+  height: 30px;
+  font-size: 15px;
+	outline: none;
+	padding: 5px 10px 5px 10px;
+	border-radius: 5px;
+}
+
 .ChatBoard-container {
   background-color: #fff;
   border-radius: 3px;
@@ -9,7 +26,7 @@
   padding: 20px;
 }
 
-.ChatWindow-messagesParentContainer {
+.ChatBoard-message-parent-container {
   padding: 5px;
   padding-bottom: 10px;
   height: calc(90% - 20px);
@@ -17,7 +34,7 @@
   border-radius: 3px;
 }
 
-.ChatWindow-messagesChildContainer {
+.ChatBoard-message-child-container {
   padding: 15px;
   padding-bottom: 0px;
   height: calc(99% - 2px);
@@ -28,36 +45,16 @@
   overflow-y: auto;
 }
 
-.ChatWindow-newMessageContainer {
+.ChatBoard-message-container {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
-      justify-content: center;
+  justify-content: center;
   -ms-flex-align: center;
-      align-items: center;
+  align-items: center;
   height: 9%;
   margin-top: 5px;
   width: 100%;
-}
-
-input {
-  width: 90%;
-  border: 1px solid;
-  height: 30px;
-  font-size: 15px;
-	outline: none;
-	padding: 5px 10px 5px 10px;
-	border-radius: 5px;
-
-}
-
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background-color: #f2f2f2;
-  min-height: 100vh;
 }
 
 .App-container {
@@ -66,9 +63,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
-      justify-content: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  justify-content: center;
+  box-sizing: border-box;
   padding: 30px;
   min-width: 1000px;
 }
